--- a/summer.html
+++ b/summer.html
@@ -1,12 +1,27 @@
-Eligibilty for the MakerTeens Summer Program:
+ - [Home](index.html): Proposal for School Year Program
+-  **[Summer](summer.html): Proposal for Summer Program**
+ - [About](about.html): Analysis of Need, Current Efforts, Demographics
+ - [People](people.html): Students, Parents, Teacher, Advisors
+ - [Courses](courses.html): Descriptions and Schedule
+ - [Logistics](logistics.html): Homework, Grades, Rules
+ - [Money](money.html): Cost and Funding of Program
+ - [Outcomes](outcomes.html): Habits of Mind, Projections, Proficiencies
+ - [Outcomes](outcomes.html): Habits of Mind, Projections, Proficiencies
+ - [Timeline](timeline.html): Blog of progress with visuals!
+
+# MAKERTEENS Summer Program # 
+
+**Earn Credit and Money!**: 
+Would you like to earn 4 HS credits while building a Tiny House this summer.
+Would you like to earn a stipend of up to $500 for your summer school work?
+
+**Eligibilty Prerequisites**
 You are currently attending Klamath Union (KU) or Klamath Learning Center (KLC).
-You would like to earn 4 HS credits while building a Tiny House this summer.
-You would like to earn a stipend of up to $500 for your summer school work?
+You passed Algebra 1 with C or better. 
+You sign the Code of Commitment: "During the summer June 14 - August 20 I agree to play no video games, and avoid using a smart phone between 8am and 4pm."
+You agree to be filmed for a documentary of this MakerTeens project.
 
-Prerequisite: passed Algebra 1 with C or better. sign “Code of Commitment”.
-[Code of Commitment: "During the summer June 14 - August 20 I agree to play no video games, and avoid using a smart phone between 8am and 4pm."]
-Additionally, student agrees to be filmed for documentary of MakerTeens project.
-
+**Dates and Times**
 June 14 - August 20, 2021 (44 school days)
 8am - 4pm (8 hours x 44 days = 352 hours)
 
